--- a/css/accordion.css
+++ b/css/accordion.css
@@ -5,6 +5,8 @@
   border: none;
   text-align: left;
   outline: none;
+  -webkit-transition: 0.4s;
+  -o-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -48,6 +50,7 @@
   background-color: white;
   max-height: 0;
   overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  -o-transition: max-height 0.2s ease-out;
   transition: max-height 0.2s ease-out;
 }
-
