--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -1,4 +1,3 @@
-
 .safe-container {
     width: -webkit-fill-available;
     padding: 0 100px;
@@ -12,11 +11,11 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     font-family: var(--ff-u);
     font-size: var(--fs-40);
     font-weight: var(--fw-b);
@@ -99,8 +98,8 @@
     .portfolio-content {
         margin: 0;
         -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
     }
 }
 
@@ -122,12 +121,23 @@
         padding: 0 75px;
     }
 
-    .header-content::before {
+    /* .header-content::before {
         width: 275px;
         height: 120px;
     }
 
     .header-content::after {
+        width: 325px;
+        height: 195px;
+    } */
+
+
+    .header-ufo {
+        width: 275px;
+        height: 120px;
+    }
+
+    .header-rocket {
         width: 325px;
         height: 195px;
     }
@@ -159,11 +169,11 @@
     .portfolio-content {
         -webkit-box-orient: vertical;
         -webkit-box-direction: reverse;
-            -ms-flex-direction: column-reverse;
-                flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         margin: 0 16px;
         gap: 40px;
     }
@@ -174,7 +184,7 @@
 
     .portfolio-title {
         -ms-flex-item-align: start;
-            align-self: flex-start;
+        align-self: flex-start;
     }
 
     .upper-portfolio-title,
@@ -207,8 +217,8 @@
         width: 100%;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         height: -webkit-fit-content;
         height: -moz-fit-content;
         height: fit-content;
@@ -221,16 +231,16 @@
         display: -ms-flexbox;
         display: flex;
         -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
     }
 
     .bigmoney-plate::after {
         left: 50%;
         bottom: -100px;
         -webkit-transform: translateX(-50%) rotate(26deg);
-            -ms-transform: translateX(-50%) rotate(26deg);
-                transform: translateX(-50%) rotate(26deg);
+        -ms-transform: translateX(-50%) rotate(26deg);
+        transform: translateX(-50%) rotate(26deg);
         width: 145px;
         height: 91px;
     }
@@ -303,8 +313,8 @@
 
     .stage-tags {
         -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
     }
 
     .tag-title,
@@ -324,8 +334,8 @@
         width: calc(100% - 64px) !important;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         padding: 0 16px !important;
         margin: 0 16px !important;
         gap: 56px;
@@ -351,8 +361,8 @@
         width: calc(100% - 32px) !important;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         margin: 88px 16px !important;
         gap: 24px;
     }
@@ -386,11 +396,11 @@
     .team-members {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         margin: 0 16px;
     }
 
@@ -412,7 +422,7 @@
         padding: 0 32px;
     }
 
-    .header-content::before {
+    /* .header-content::before {
         width: 306px;
         height: 232px;
         right: 0;
@@ -421,6 +431,21 @@
     }
 
     .header-content::after {
+        width: 316px;
+        height: 316px;
+        left: 0;
+        right: initial;
+        bottom: -170px;
+    } */
+    .header-ufo {
+        width: 306px;
+        height: 232px;
+        right: 0;
+        left: initial;
+        top: -95px;
+    }
+
+    .header-rocket {
         width: 316px;
         height: 316px;
         left: 0;
@@ -470,14 +495,14 @@
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
         -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
         gap: 12px;
         padding: 16px;
         margin-top: 28px;
@@ -508,8 +533,8 @@
         display: flex;
         padding: 0 16px;
         -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
         margin-top: 27px;
     }
 
@@ -555,18 +580,18 @@
     .form-container form {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
         margin: 0;
         -ms-flex-wrap: initial;
-            flex-wrap: initial;
+        flex-wrap: initial;
     }
 
     .form-container form input,
     .form-container form button {
         -webkit-box-flex: initial;
-            -ms-flex: initial;
-                flex: initial;
+        -ms-flex: initial;
+        flex: initial;
         font-size: var(--fs-16);
     }
 
@@ -659,11 +684,18 @@
         padding: 0 16px;
     }
 
-    .header-content::before {
+    /* .header-content::before {
         right: -10px;
     }
 
     .header-content::after {
+        left: -10px;
+    } */
+    .header-ufo {
+        right: -10px;
+    }
+
+    .header-rocket {
         left: -10px;
     }
 
@@ -676,7 +708,7 @@
     }
 
     .team-left-grid {
-            grid-template-areas:
+        grid-template-areas:
             "photo-area1 photo-area1"
             "photo-area2 photo-area2"
             "single-photo-area single-photo-area"
@@ -684,7 +716,7 @@
     }
 
     .team-right-grid {
-            grid-template-areas:
+        grid-template-areas:
             "single-photo-area3 single-photo-area2"
             "photo-area3 photo-area4"
             "photo-area5 photo-area6"
@@ -696,8 +728,8 @@
         display: -ms-flexbox;
         display: flex;
         -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
     }
 
     .single-photo-area2-mobile img {
@@ -735,13 +767,25 @@
 }
 
 @media (max-width:340px) {
-    .header-content::before {
+
+    /* .header-content::before {
         width: 240px;
         height: 100px;
         top: 0px;
     }
 
     .header-content::after {
+        width: 260px;
+        height: 120px;
+        bottom: 0px;
+    } */
+    .header-ufo {
+        width: 240px;
+        height: 100px;
+        top: 0px;
+    }
+
+    .header-rocket {
         width: 260px;
         height: 120px;
         bottom: 0px;
