--- a/css/burger-nav.css
+++ b/css/burger-nav.css
@@ -1,4 +1,3 @@
-
 .menu-icon {
     display: none;
 }
@@ -41,6 +40,12 @@
         -webkit-transition: 0.3s;
         -o-transition: 0.3s;
         transition: 0.3s;
+    }
+
+    .menu-icon:hover span,
+    .menu-icon:hover::before,
+    .menu-icon:hover::after {
+        background-color: var(--main-content-color);
     }
 
     .menu-icon span activem,
@@ -111,8 +116,8 @@
         left: 0;
         visibility: hidden;
         -webkit-transform: translateY(20px);
-            -ms-transform: translateY(20px);
-                transform: translateY(20px);
+        -ms-transform: translateY(20px);
+        transform: translateY(20px);
         -webkit-transition: all 0.3s;
         -o-transition: all 0.3s;
         transition: all 0.3s;
@@ -129,8 +134,8 @@
         opacity: 1;
         visibility: visible;
         -webkit-transform: translateY(0px);
-            -ms-transform: translateY(0px);
-                transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        transform: translateY(0px);
     }
 
     .menu-body::before {
@@ -148,9 +153,9 @@
         display: flex;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        gap:40px;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        gap: 40px;
     }
 
     .menu-list>button {
@@ -163,7 +168,7 @@
         font-family: var(--ff-t);
         font-size: var(--fs-24);
         font-weight: var(--fw-r);
-        margin:0 0 0 16px;
+        margin: 0 0 0 16px;
     }
 
     .menu-list>ul {
@@ -177,8 +182,8 @@
         flex-direction: column;
         margin-top: 50px;
         -webkit-box-align: start;
-            -ms-flex-align: start;
-                align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start;
         padding: 100px 0 0 16px;
 
     }
